test/tests/stages/18_structures/valid/no_structure_parameters/libraries/global_struct.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[8]: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: s
        Bool: 0
        List[3]: 
          CMemberDeclaration: 
            TIdentifier: i
            Int: 
          CMemberDeclaration: 
            TIdentifier: arr
            Array: 
              TLong: 2
              Char: 
          CMemberDeclaration: 
            TIdentifier: d
            Double: 
    CStructDecl: 
      CStructDeclaration: 
        TIdentifier: outer
        Bool: 0
        List[2]: 
          CMemberDeclaration: 
            TIdentifier: c
            Char: 
          CMemberDeclaration: 
            TIdentifier: inner
            Structure: 
              TIdentifier: s
              Bool: 0
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: global
        None: 
        Structure: 
          TIdentifier: s
          Bool: 0
        CExtern: 
    CVarDecl: 
      CVariableDeclaration: 
        TIdentifier: global_outer
        None: 
        Structure: 
          TIdentifier: outer
          Bool: 0
        CExtern: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: update_struct
        List[0]: 
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: update_outer_struct
        List[0]: 
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: update_struct
        List[0]: 
        CB: 
          List[2]: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CSubscript: 
                    CDot: 
                      TIdentifier: arr
                      CVar: 
                        TIdentifier: global
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    None: 
                  CBinary: 
                    CMultiply: 
                    CSubscript: 
                      CDot: 
                        TIdentifier: arr
                        CVar: 
                          TIdentifier: global
                          None: 
                        None: 
                      CConstant: 
                        CConstInt: 
                          TInt: 0
                        None: 
                      None: 
                    CConstant: 
                      CConstInt: 
                        TInt: 2
                      None: 
                    None: 
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDot: 
                    TIdentifier: d
                    CVar: 
                      TIdentifier: global
                      None: 
                    None: 
                  CConstant: 
                    CConstDouble: 
                      TDouble: 5.000000
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: update_outer_struct
        List[0]: 
        CB: 
          List[2]: 
            CD: 
              CVarDecl: 
                CVariableDeclaration: 
                  TIdentifier: inner
                  CCompoundInit: 
                    List[3]: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 0
                          None: 
                        None: 
                      CCompoundInit: 
                        List[2]: 
                          CSingleInit: 
                            CUnary: 
                              CNegate: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 1
                                None: 
                              None: 
                            None: 
                          CSingleInit: 
                            CUnary: 
                              CNegate: 
                              CConstant: 
                                CConstInt: 
                                  TInt: 1
                                None: 
                              None: 
                            None: 
                        None: 
                      CSingleInit: 
                        CConstant: 
                          CConstInt: 
                            TInt: 0
                          None: 
                        None: 
                    None: 
                  Structure: 
                    TIdentifier: s
                    Bool: 0
                  None: 
            CS: 
              CExpression: 
                CAssignment: 
                  None: 
                  CDot: 
                    TIdentifier: inner
                    CVar: 
                      TIdentifier: global_outer
                      None: 
                    None: 
                  CVar: 
                    TIdentifier: inner
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Void: 
        None: 
